--- a/index.html
+++ b/index.html
@@ -3,11 +3,54 @@
 	<head> 
 		<title>LASTNAME Chapter14HandsOnExercise</title> 
 		<meta charset="utf-8"> 
-		<style>
-		
-		</style>
+  <script src="https://ajax.googleleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
+ <style>
 	</head> 
 <body> 
+<h1>JavaScript Form Handling</h1>
+<form method="post"
+      action="http://webdevbasics.net/scripts/demo.php"
+      onsubmit="return validateForm();">
+<label for="userName">Name:</label>
+<input type="text" name="userName" id="userName">
+<label for="userAge">Age:</label>
+<input type="text" name="userAge" id="userAge">
+<label for="userCity">City</label>
+<input type="text" id="userCity">
+<input type="submit" value="Send information" id="submit">
+</form>
+	 
 
+	<h1>Slideshow</h1>
+	<div class="fotorama" data-autoplay="true">
+	<img src="LV.jpg" data-caption="Los Vegas" alt="Los Vegas">
+	<img src="MF.jpg" data-caption="Mount Fuji" alt="Mount Fuji">
+	<img src="RRC.jpg" data-caption="Red Rock Canyon" alt="Red Rock Canyon">
+	<img src="TT.jpg" data-caption="Tokyo Tower" alt="Tokyo Tower">
+	</div>
+	
+	 
+	 
+	 <script>
+function validateForm(){
+	if(document.forms[0].userAge.value < 18 || document.forms[0].userAge.value > 100){
+		alert("Age is less than 18 you do not have access");
+		return false;
+	}
+	if(document.forms[0].userCity.value == ""){
+		alert("Name field cannot be empty");
+		return false;
+	}
+	alertI("City and age are valid");
+	return true;
+}
+	$(document).ready(function(){
+	 $('#more').click(function(){
+		 $('details').toggle();
+	 });
+	});
+	</script>
 </body> 
 </html> 
